--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --foreground: #ffffff;
-  --background: #171717;
+  --background: #F8F9FC;
+  --foreground: #171717;
 }
 
 body {
